--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,254 @@
 /* NOTE: Make sure that when you complete your Lab, you leave a comment at the top of this file listing which new properties you used! */
 
+/*
+ New CSS: Backdrop-filter
+ The backdrop-filter property allows graphical effects like blurring to a section, such as a div. I have implemented this by creating a box and applying a blur effect to it.*/
+
 :root {
   --dk-grey: #263238;
-  --hot-pink: #EC407A;
-  --yellow: #FDD835;
-  --green: #8BC34A;
-  --white: #FAFAFA;
+  --hot-pink: #ec407a;
+  --yellow: #fdd835;
+  --green: #8bc34a;
+  --white: #fafafa;
+}
+
+body {
+  font-family: "Nunito", sans-serif;
+  overflow: hidden;
+}
+
+.inner-container {
+  margin: 0 auto;
+}
+
+.wide-flex {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  padding: 0 1.25rem;
+  box-sizing: border-box;
+  background-color: var(--dk-grey);
+}
+
+.flex-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+h1 {
+  color: var(--white);
+  font-size: 2rem;
+  flex-grow: 1;
+  text-align: center;
+}
+
+nav {
+  flex-grow: 1;
+  justify-content: center;
+  display: flex;
+}
+
+h1 span,
+main h2 span {
+  color: var(--hot-pink);
+}
+
+nav ul.main-menu {
+  font-size: 1.25rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  list-style: none;
+  padding: 0;
+}
+
+nav ul.main-menu > li {
+  position: relative;
+  padding: 2rem;
+}
+
+nav ul li .dropdown {
+  display: none;
+  position: absolute;
+  min-width: 18.75rem;
+  top: 100%;
+  left: 0;
+  z-index: 10;
+}
+
+nav ul li .dropdown ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  background-color: var(--dk-grey);
+  border-radius: 0 0 0.5rem 0.5rem;
+}
+
+nav ul li .dropdown ul li {
+  padding: 0.5rem 1rem;
+}
+
+nav ul li .dropdown ul li a {
+  color: var(--white);
+  text-decoration: none;
+}
+
+nav ul li .dropdown ul li a:hover {
+  color: var(--hot-pink);
+}
+
+nav ul.main-menu > li a {
+  color: var(--white);
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+}
+
+nav ul.main-menu > li a img {
+  width: 1rem;
+  height: 1rem;
+  margin: 0 0.5rem;
+}
+
+nav ul li.dropdown-item {
+  padding-right: 5rem;
+}
+
+nav ul li.dropdown-item:hover .dropdown {
+  display: block;
+}
+
+.menu-icon img {
+  width: 3.125rem;
+  height: 3.125rem;
+}
+
+main section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-image: url("../img/crowd-background.webp");
+  background-position: center;
+  background-size: cover;
+}
+
+main section div {
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 2rem;
+  border-radius: 0.5rem;
+  text-align: center;
+  max-width: 25rem;
+}
+
+main section h2 {
+  color: var(--dk-grey);
+  font-size: 2rem;
+  margin-bottom: 1rem;
+}
+
+main section p {
+  color: var(--dk-grey);
+  margin-bottom: 1.5rem;
+}
+
+main section .button {
+  background: linear-gradient(90deg, var(--hot-pink), var(--yellow));
+  color: var(--white);
+  border: none;
+  padding: 0.75rem 1.5rem;
+  border-radius: 2rem;
+  font-weight: bold;
+  font-size: 1rem;
+  cursor: pointer;
+}
+
+main section .button:hover {
+  background-color: var(--hot-pink);
+  transition: 0.3s ease-out;
+}
+
+@media screen and (min-width: 950px) {
+  .menu-icon {
+    display: none;
+  }
+  main section div {
+    background-color: rgba(255, 255, 255, 0.5);
+    backdrop-filter: blur(0.625rem) brightness(0.8); /*NEW CSS*/
+  }
+}
+@media screen and (max-width: 950px) {
+  .menu-icon {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: absolute;
+    top: 0;
+    right: 1.25rem;
+    color: var(--white);
+  }
+
+  nav.sidebar {
+    position: fixed;
+    left: -100%;
+    top: 0;
+    width: 70%;
+    height: 100%;
+    background-color: var(--dk-grey);
+    transition: left 0.3s ease;
+  }
+
+  nav.sidebar.open {
+    left: 0;
+  }
+
+  nav.sidebar ul.main-menu {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    padding: 2.5rem 1.25rem;
+  }
+
+  nav.sidebar ul.main-menu > li {
+    width: 100%;
+    text-align: center;
+    padding: 1rem 0;
+  }
+
+  nav.sidebar ul.main-menu .dropdown {
+    position: static;
+    width: 100%;
+  }
+
+  nav.sidebar ul.main-menu .dropdown ul {
+    background-color: var(--dk-grey);
+  }
+
+  nav.sidebar ul.main-menu .dropdown ul li a:hover {
+    color: var(--hot-pink);
+  }
+
+  nav ul.main-menu {
+    display: none;
+  }
+
+  nav.sidebar ul.main-menu {
+    display: flex;
+  }
+
+  main section div {
+    max-width: 18.75rem;
+  }
+  h1 {
+    padding: 1rem;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  nav.sidebar {
+    width: 70%;
+  }
 }
